[package]
name = "corrupted-mementos"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
tokio = { version =  "1.40.0", features = ["full"] }
subxt = { version = "0.37.0", features = ["default"] }
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15"
hex = "0.4.3"
serde = { version = "1.0.210", features = ["derive"] }
